# snake

./: .gitignore  CMakeLists.txt  README.md  patch_linux.sh
cmake/: FindSDL2_mixer.cmake
include/: change_direction.h  check_btn_pressed.h  check_collision.h  draw_food.h  draw_score.h  draw_snake.h  draw_walls.h  init_game.h  init_sdl.h  play_sfx.h  spawn_food.h  spawn_snake.h  terminate.h  types.h  update_score.h  update_snake.h
src/: change_direction.c  check_btn_pressed.c  check_collision.c  draw_food.c  draw_score.c  draw_snake.c  draw_walls.c  init_game.c  init_sdl.c  main.c  play_sfx.c  spawn_food.c  spawn_snake.c  terminate.c  update_score.c  update_snake.c
